<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26F7FF00"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewOpinion0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:gravity="center"
        android:onClick="onClickAnswer"
        android:padding="@dimen/paddingIncideTextView"
        android:text="@string/first"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/TextSizeOptions"
        app:layout_constraintBottom_toTopOf="@+id/textViewOpinion2"
        app:layout_constraintEnd_toStartOf="@+id/textViewOpinion1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewOpinion1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:gravity="center"
        android:onClick="onClickAnswer"
        android:padding="@dimen/paddingIncideTextView"
        android:text="@string/second"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/TextSizeOptions"
        app:layout_constraintBottom_toTopOf="@+id/textViewOpinion3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewOpinion0" />

    <TextView
        android:id="@+id/textViewOpinion2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:gravity="center"
        android:onClick="onClickAnswer"
        android:padding="@dimen/paddingIncideTextView"
        android:text="@string/threeth"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/TextSizeOptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewOpinion3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewOpinion3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:gravity="center"
        android:onClick="onClickAnswer"
        android:padding="@dimen/paddingIncideTextView"
        android:text="@string/firsth"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/TextSizeOptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toEndOf="@id/textViewOpinion2" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="#98DC4A"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="361dp"
        android:layout_height="349dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="246dp"
        android:gravity="center"
        android:text="@string/answer"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewOpinion0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>